[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/fonts/ShantellSans-Italic-VariableFont_BNCE,INFM,SPAC,wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/fonts/Anton-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/vol.gd" type="Script" id=3]
[ext_resource path="res://resources/images/menubg.jpeg" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 39
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 511, 296.5 )
scale = Vector2( 3.43333, 3.56548 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 299.0
margin_top = 136.0
margin_right = 719.0
margin_bottom = 482.0
color = Color( 0, 0, 0, 0.603922 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -209.0
margin_top = -2.0
margin_right = 210.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
valign = 1

[node name="HSlider" type="HSlider" parent="ColorRect"]
margin_left = 160.0
margin_top = 120.0
margin_right = 377.0
margin_bottom = 239.0
min_value = -50.0
max_value = 0.0
tick_count = 5

[node name="Label2" type="Label" parent="ColorRect"]
margin_left = 28.0
margin_top = 163.0
margin_right = 139.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 2 )
text = "Music Vol"

[node name="Label3" type="Label" parent="ColorRect"]
margin_left = 87.0
margin_top = 214.0
margin_right = 198.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 2 )
text = "Music "

[node name="CheckButton" type="CheckButton" parent="ColorRect"]
margin_left = 218.0
margin_top = 211.0
margin_right = 294.0
margin_bottom = 251.0
pressed = true

[node name="Button" type="Button" parent="ColorRect"]
margin_left = 159.0
margin_top = 272.0
margin_right = 268.0
margin_bottom = 322.0
custom_fonts/font = SubResource( 3 )
text = "Done"

[node name="Button2" type="Button" parent="ColorRect"]
margin_left = 121.0
margin_top = 99.0
margin_right = 326.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 4 )
text = "About naYana"

[connection signal="value_changed" from="ColorRect/HSlider" to="ColorRect" method="_on_HSlider_value_changed"]
[connection signal="toggled" from="ColorRect/CheckButton" to="ColorRect" method="_on_CheckButton_toggled"]
[connection signal="pressed" from="ColorRect/Button" to="ColorRect" method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect/Button2" to="ColorRect" method="_on_Button2_pressed"]
